--- a/src/pages/realisations/index.astro
+++ b/src/pages/realisations/index.astro
@@ -1,6 +1,7 @@
 ---
 import SiteLayout from "@/layouts/SiteLayout.astro";
 import ListingProjectCard from "@/components/ListingProjectCard";
+import "@/styles/background.css";
 import { Reveal } from "@/components/Scroll";
 import {
   getProjectsPage,
